Skip to content

TS Long delay while searching move forward position

Moved from forum on your request: https://forum.videolan.org/viewtopic.php?f=2&t=161401

On some TS decryptd videos I have long delay while pressed move (10sec) forward etc. and errors in debug log:

ts warning: scrambled state changed on pid 1565 (1->0)
ts warning: scrambled state changed on pid 1565 (0->1)
ts warning: scrambled state changed on pid 1565 (1->0)
ts warning: scrambled state changed on pid 1565 (0->1)
mmdevice debug: state changed: 0
wasapi debug: reset
main debug: Received first picture
main error: Timestamp conversion failed for 75878531789: no reference clock
main error: Could not convert timestamp 0 for FFmpeg
main debug: auto hiding mouse cursor
ts debug: Seek():cannot find a time position.
ts debug: Seek():cannot find a time position.
ts warning: lost synchro
ts debug: skipping 123 bytes of garbage at 22858797
ts debug: resynced at 22858920
ts debug: first packet for pid=1565 cc=0x7
ts debug: first packet for pid=1525 cc=0x7
ts debug: Program 103 PCR prequeue fixup 6830660952->6830589651
main debug: Buffering 0%
mpegaudio debug: waiting for PTS
ts warning: discontinuity received 0xb instead of 0x9 (pid=5103)
ts error: libdvbpsi error (PSI decoder): TS discontinuity (received 11, expected 9) for PID 5103
ts debug: PMTCallBack called for program 103
ts warning: discontinuity received 0xa instead of 0x8 (pid=0)
ts error: libdvbpsi error (PSI decoder): TS discontinuity (received 10, expected 8) for PID 0
ts debug: PATCallBack called
ts warning: scrambled state changed on pid 1565 (1->0)
ts warning: scrambled state changed on pid 1565 (0->1)
main debug: Buffering 2%
ts warning: scrambled state changed on pid 1565 (1->0)
ts warning: scrambled state changed on pid 1565 (0->1)
main debug: Buffering 6%
main debug: Buffering 9%
main debug: Buffering 13%
main debug: Buffering 17%
main debug: Buffering 21%
main debug: Buffering 24%
main debug: Buffering 28%
main debug: Buffering 32%
main debug: Buffering 35%
main debug: Buffering 39%
main debug: Buffering 43%
main debug: Buffering 47%
main debug: Buffering 50%
main debug: Buffering 54%
main debug: Buffering 58%
main debug: Buffering 62%
main debug: Buffering 65%
main debug: Buffering 66%
main debug: Buffering 69%
main debug: Buffering 73%
h264 debug: Seen SEI recovery point, 0 recovery frames
h264 debug: Recovering using SEI, prerolling 0 reference pics
main debug: Buffering 76%
h264 debug: Recovery from SEI recovery point complete
avcodec debug: available hardware decoder output format 53 (dxva2_vld)
avcodec debug: available hardware decoder output format 118 (d3d11va_vld)
avcodec debug: available hardware decoder output format 174 (d3d11)
avcodec debug: available software decoder output format 0 (yuv420p)
avcodec debug: reusing decoder output format 118
main debug: Buffering 80%
main debug: Buffering 84%
main debug: Buffering 88%
main debug: Buffering 91%
main debug: Buffering 95%
main debug: Buffering 99%
main debug: Stream buffering done (1030 ms in 10 ms)
main debug: Decoder wait done in 4 ms
main warning: buffer too late (-425456 us): dropped
main warning: buffer too late (-402456 us): dropped
main warning: buffer too late (-378456 us): dropped
main warning: buffer too late (-354456 us): dropped
main warning: buffer too late (-330456 us): dropped
main warning: buffer too late (-306456 us): dropped
main warning: buffer too late (-282456 us): dropped
main warning: buffer too late (-258456 us): dropped
main warning: buffer too late (-234456 us): dropped
main warning: buffer too late (-210456 us): dropped
main warning: buffer too late (-186456 us): dropped
main warning: buffer too late (-162456 us): dropped
main warning: buffer too late (-138456 us): dropped
main warning: buffer too late (-114456 us): dropped
main warning: buffer too late (-90456 us): dropped
main warning: buffer too late (-66456 us): dropped
main debug: playback too late (42454): flushing buffers
wasapi debug: reset
mmdevice debug: state changed: 1
main warning: playback too late (60455): up-sampling
ts warning: scrambled state changed on pid 1565 (1->0)
ts warning: scrambled state changed on pid 1565 (0->1)
ts warning: scrambled state changed on pid 1565 (1->0)
ts warning: scrambled state changed on pid 1565 (0->1)
ts warning: scrambled state changed on pid 1565 (1->0)
ts warning: scrambled state changed on pid 1565 (0->1)
ts warning: scrambled state changed on pid 1565 (1->0)
ts warning: scrambled state changed on pid 1565 (0->1)
ts warning: scrambled state changed on pid 1565 (1->0)
ts warning: scrambled state changed on pid 1565 (0->1)
ts warning: scrambled state changed on pid 1565 (1->0)
ts warning: scrambled state changed on pid 1565 (0->1)
main debug: VoutDisplayEvent 'mouse button' 0 t=8
main debug: VoutDisplayEvent 'mouse button' 0 t=9
main debug: toggling resume
mmdevice debug: state changed: 0
main debug: toggling resume
main debug: auto hiding mouse cursor

Reproduced on v3.0.18 and earlier too.

It works on default Windows video player ;P

Last version it is working - v2.2.8, so it's broken since v3.0.0 I guess.

1h sample: https://mega.nz/file/tf5kzKZC#pJGyfp1u7wvd5mgQdZJWEc30tyFNrK2cYhl538rvjyc

Edited by Mariusz Rakowski
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information